Modernize original Java sources and lifecycle handling for Java 25